# winglass

./: PROJECT.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: fetch-geoip.ps1  gen-icon.ps1  setup.ps1
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dns.rs  etw.rs  geoip.rs  handles.rs  lib.rs  main.rs  net.rs  threads.rs  types.rs  verify.rs  win.rs
src/lib/: DetailPanel.svelte  Sparkline.svelte  format.ts  sig.ts  types.ts
src/routes/: +page.svelte
