[package]
name = "winglass"
version = "1.0.1"
description = "Modern Windows process manager"
authors = ["you"]
edition = "2021"

[lib]
name = "winglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

sysinfo = "0.32"
ferrisetw = "1"
maxminddb = "0.24"
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
    "Win32_Storage_FileSystem",
    "Wdk_Foundation",
    "Wdk_System_SystemInformation",
    "Wdk_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
